# felgo-cloud-test

./: CMakeLists.txt
android/: AndroidManifest.xml
android/res/values/: strings.xml
ios/: Project-Info.plist
qml/model/: DataModel.qml
src/: thing.cpp  thing.h
tests/: CMakeLists.txt  TestThing.cpp
